--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body {
 }
 
 #line1 {
-    rotate: 90deg;
+    transform: rotate(90deg);
     top: 250px;
     left: 250px;
     visibility: hidden;
@@ -86,7 +86,7 @@ body {
 }
 
 #line2 {
-    rotate: 45deg;
+    transform: rotate(45deg);
     top: 250px;
     left: 300px;
     visibility: hidden;
@@ -94,7 +94,7 @@ body {
 }
 
 #line3 {
-    rotate: 125deg;
+    transform: rotate(125deg);
     top: 250px;
     left: 210px;
     visibility: hidden;
@@ -102,7 +102,7 @@ body {
 }
 
 #line4 {
-    rotate: 45deg;
+    transform: rotate(45deg);
     top: 370px;
     left: 300px;
     visibility: hidden;
@@ -110,7 +110,7 @@ body {
 }
 
 #line5 {
-    rotate: 125deg;
+    transform: rotate(125deg);
     top: 370px;
     left: 210px;
     visibility: hidden;
@@ -177,30 +177,30 @@ body {
    }
 
    #line1 {
-    rotate: 90deg;
+    transform: rotate(90deg);
     top: 150px;
     left: 150px;
     }
 
 #line2 {
-    rotate: 45deg;
+    transform: rotate(45deg);
     top: 160px;
     left: 180px;
 }
 
 #line3 {
-    rotate: 125deg;
+    transform: rotate(125deg);
     top: 160px;
     left: 125px;
 }
 #line4 {
-    rotate: 45deg;
+    transform: rotate(45deg);
     top: 210px;
     left: 180px;
 }
 
 #line5 {
-    rotate: 125deg;
+    transform: rotate(125deg);
     top: 210px;
     left: 130px;
 }
